pp2/y.output
State 193 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VariableDecl
    5     | InterfaceDecl
    6     | ClassDecl
    7     | FunctionDecl

    8 VariableDecl: Variable ';'

    9 Variable: Type T_Identifier

   10 Type: T_Int
   11     | T_Double
   12     | T_Bool
   13     | T_String
   14     | T_Void
   15     | T_Identifier
   16     | Type T_Dims

   17 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList '}'

   18 PrototypeList: Prototype PrototypeList
   19              | %empty

   20 Prototype: Type T_Identifier '(' ParamsList ')' ';'

   21 ParamsList: Param AParam
   22           | %empty

   23 AParam: ',' Param AParam
   24       | %empty

   25 Param: Variable

   26 FunctionDecl: Type T_Identifier '(' ParamsList ')' StmtBlock

   27 ClassDecl: T_Class T_Identifier '{' FieldList '}'
   28          | T_Class T_Identifier T_Extends T_Identifier '{' FieldList '}'
   29          | T_Class T_Identifier T_Implements InterfaceList '{' FieldList '}'
   30          | T_Class T_Identifier T_Extends T_Identifier T_Implements InterfaceList '{' FieldList '}'

   31 InterfaceList: T_Identifier AInterface

   32 AInterface: ',' T_Identifier AInterface
   33           | %empty

   34 FieldList: Field FieldList
   35          | %empty

   36 Field: VariableDecl
   37      | FunctionDecl

   38 StmtBlock: '{' VariableDeclList StmtList '}'

   39 VariableDeclList: VariableDeclList VariableDecl
   40                 | %empty

   41 StmtList: Stmt StmtList
   42         | %empty

   43 Stmt: ';'
   44     | Expr ';'
   45     | IfStmt
   46     | WhileStmt
   47     | ForStmt
   48     | T_Break ';'
   49     | ReturnStmt
   50     | PrintStmt
   51     | StmtBlock

   52 IfStmt: T_If '(' Expr ')' Stmt
   53       | T_If '(' Expr ')' Stmt T_Else Stmt

   54 WhileStmt: T_While '(' Expr ')' Stmt

   55 ForStmt: T_For '(' Expr ';' Expr ';' Expr ')' Stmt
   56        | T_For '(' Expr ';' Expr ';' ')' Stmt
   57        | T_For '(' ';' Expr ';' Expr ')' Stmt
   58        | T_For '(' ';' Expr ';' ')' Stmt

   59 ReturnStmt: T_Return Expr ';'
   60           | T_Return ';'

   61 PrintStmt: T_Print '(' PrintList ')' ';'

   62 PrintList: Expr AExpr

   63 Expr: LValue '=' Expr
   64     | Expr '+' Expr
   65     | Expr '-' Expr
   66     | Expr '*' Expr
   67     | Expr '/' Expr
   68     | Expr '%' Expr
   69     | '-' Expr
   70     | Expr '<' Expr
   71     | Expr T_LessEqual Expr
   72     | Expr '>' Expr
   73     | Expr T_GreaterEqual Expr
   74     | Expr T_Equal Expr
   75     | Expr T_NotEqual Expr
   76     | Expr T_And Expr
   77     | Expr T_Or Expr
   78     | '!' Expr
   79     | T_ReadInteger '(' ')'
   80     | T_ReadLine '(' ')'
   81     | T_New '(' T_Identifier ')'
   82     | T_NewArray '(' Expr ',' Type ')'
   83     | Constant
   84     | LValue
   85     | T_This
   86     | Call
   87     | '(' Expr ')'

   88 LValue: T_Identifier
   89       | Expr '.' T_Identifier
   90       | Expr '[' Expr ']'

   91 Call: T_Identifier '(' Actuals ')'
   92     | Expr '.' T_Identifier '(' Actuals ')'

   93 Actuals: Expr AExpr
   94        | %empty

   95 AExpr: ',' Expr AExpr
   96      | %empty

   97 Constant: T_IntConstant
   98         | T_DoubleConstant
   99         | T_BoolConstant
  100         | T_StringConstant
  101         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 78
'%' (37) 68
'(' (40) 20 26 52 53 54 55 56 57 58 61 79 80 81 82 87 91 92
')' (41) 20 26 52 53 54 55 56 57 58 61 79 80 81 82 87 91 92
'*' (42) 66
'+' (43) 64
',' (44) 23 32 82 95
'-' (45) 65 69
'.' (46) 89 92
'/' (47) 67
';' (59) 8 20 43 44 48 55 56 57 58 59 60 61
'<' (60) 70
'=' (61) 63
'>' (62) 72
'[' (91) 90
']' (93) 90
'{' (123) 17 27 28 29 30 38
'}' (125) 17 27 28 29 30 38
error (256)
T_Identifier (258) 9 15 17 20 26 27 28 29 30 31 32 81 88 89 91 92
T_StringConstant (259) 100
T_IntConstant (260) 97
T_DoubleConstant (261) 98
T_BoolConstant (262) 99
T_Void (263) 14
T_Bool (264) 12
T_Int (265) 10
T_Double (266) 11
T_String (267) 13
T_Class (268) 27 28 29 30
T_LessEqual (269) 71
T_GreaterEqual (270) 73
T_Equal (271) 74
T_NotEqual (272) 75
T_Dims (273) 16
T_And (274) 76
T_Or (275) 77
T_Null (276) 101
T_Extends (277) 28 30
T_This (278) 85
T_Interface (279) 17
T_Implements (280) 29 30
T_While (281) 54
T_For (282) 55 56 57 58
T_If (283) 52 53
T_Else (284) 53
T_Return (285) 59 60
T_Break (286) 48
T_New (287) 81
T_NewArray (288) 82
T_Print (289) 61
T_ReadInteger (290) 79
T_ReadLine (291) 80
UMINUS (292)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
Program (57)
    on left: 1, on right: 0
DeclList (58)
    on left: 2 3, on right: 1 2
Decl (59)
    on left: 4 5 6 7, on right: 2 3
VariableDecl (60)
    on left: 8, on right: 4 36 39
Variable (61)
    on left: 9, on right: 8 25
Type (62)
    on left: 10 11 12 13 14 15 16, on right: 9 16 20 26 82
InterfaceDecl (63)
    on left: 17, on right: 5
PrototypeList (64)
    on left: 18 19, on right: 17 18
Prototype (65)
    on left: 20, on right: 18
ParamsList (66)
    on left: 21 22, on right: 20 26
AParam (67)
    on left: 23 24, on right: 21 23
Param (68)
    on left: 25, on right: 21 23
FunctionDecl (69)
    on left: 26, on right: 7 37
ClassDecl (70)
    on left: 27 28 29 30, on right: 6
InterfaceList (71)
    on left: 31, on right: 29 30
AInterface (72)
    on left: 32 33, on right: 31 32
FieldList (73)
    on left: 34 35, on right: 27 28 29 30 34
Field (74)
    on left: 36 37, on right: 34
StmtBlock (75)
    on left: 38, on right: 26 51
VariableDeclList (76)
    on left: 39 40, on right: 38 39
StmtList (77)
    on left: 41 42, on right: 38 41
Stmt (78)
    on left: 43 44 45 46 47 48 49 50 51, on right: 41 52 53 54 55 56
    57 58
IfStmt (79)
    on left: 52 53, on right: 45
WhileStmt (80)
    on left: 54, on right: 46
ForStmt (81)
    on left: 55 56 57 58, on right: 47
ReturnStmt (82)
    on left: 59 60, on right: 49
PrintStmt (83)
    on left: 61, on right: 50
PrintList (84)
    on left: 62, on right: 61
Expr (85)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
    81 82 83 84 85 86 87, on right: 44 52 53 54 55 56 57 58 59 62 63
    64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 82 87 89 90 92 93
    95
LValue (86)
    on left: 88 89 90, on right: 63 84
Call (87)
    on left: 91 92, on right: 86
Actuals (88)
    on left: 93 94, on right: 91 92
AExpr (89)
    on left: 95 96, on right: 62 93 95
Constant (90)
    on left: 97 98 99 100 101, on right: 83


State 0

    0 $accept: . Program $end

    T_Identifier  shift, and go to state 1
    T_Void        shift, and go to state 2
    T_Bool        shift, and go to state 3
    T_Int         shift, and go to state 4
    T_Double      shift, and go to state 5
    T_String      shift, and go to state 6
    T_Class       shift, and go to state 7
    T_Interface   shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    VariableDecl   go to state 12
    Variable       go to state 13
    Type           go to state 14
    InterfaceDecl  go to state 15
    FunctionDecl   go to state 16
    ClassDecl      go to state 17


State 1

   15 Type: T_Identifier .

    $default  reduce using rule 15 (Type)


State 2

   14 Type: T_Void .

    $default  reduce using rule 14 (Type)


State 3

   12 Type: T_Bool .

    $default  reduce using rule 12 (Type)


State 4

   10 Type: T_Int .

    $default  reduce using rule 10 (Type)


State 5

   11 Type: T_Double .

    $default  reduce using rule 11 (Type)


State 6

   13 Type: T_String .

    $default  reduce using rule 13 (Type)


State 7

   27 ClassDecl: T_Class . T_Identifier '{' FieldList '}'
   28          | T_Class . T_Identifier T_Extends T_Identifier '{' FieldList '}'
   29          | T_Class . T_Identifier T_Implements InterfaceList '{' FieldList '}'
   30          | T_Class . T_Identifier T_Extends T_Identifier T_Implements InterfaceList '{' FieldList '}'

    T_Identifier  shift, and go to state 18


State 8

   17 InterfaceDecl: T_Interface . T_Identifier '{' PrototypeList '}'

    T_Identifier  shift, and go to state 19


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 20


State 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Identifier  shift, and go to state 1
    T_Void        shift, and go to state 2
    T_Bool        shift, and go to state 3
    T_Int         shift, and go to state 4
    T_Double      shift, and go to state 5
    T_String      shift, and go to state 6
    T_Class       shift, and go to state 7
    T_Interface   shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 21
    VariableDecl   go to state 12
    Variable       go to state 13
    Type           go to state 14
    InterfaceDecl  go to state 15
    FunctionDecl   go to state 16
    ClassDecl      go to state 17


State 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 12

    4 Decl: VariableDecl .

    $default  reduce using rule 4 (Decl)


State 13

    8 VariableDecl: Variable . ';'

    ';'  shift, and go to state 22


State 14

    9 Variable: Type . T_Identifier
   16 Type: Type . T_Dims
   26 FunctionDecl: Type . T_Identifier '(' ParamsList ')' StmtBlock

    T_Identifier  shift, and go to state 23
    T_Dims        shift, and go to state 24


State 15

    5 Decl: InterfaceDecl .

    $default  reduce using rule 5 (Decl)


State 16

    7 Decl: FunctionDecl .

    $default  reduce using rule 7 (Decl)


State 17

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


State 18

   27 ClassDecl: T_Class T_Identifier . '{' FieldList '}'
   28          | T_Class T_Identifier . T_Extends T_Identifier '{' FieldList '}'
   29          | T_Class T_Identifier . T_Implements InterfaceList '{' FieldList '}'
   30          | T_Class T_Identifier . T_Extends T_Identifier T_Implements InterfaceList '{' FieldList '}'

    T_Extends     shift, and go to state 25
    T_Implements  shift, and go to state 26
    '{'           shift, and go to state 27


State 19

   17 InterfaceDecl: T_Interface T_Identifier . '{' PrototypeList '}'

    '{'  shift, and go to state 28


State 20

    0 $accept: Program $end .

    $default  accept


State 21

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 22

    8 VariableDecl: Variable ';' .

    $default  reduce using rule 8 (VariableDecl)


State 23

    9 Variable: Type T_Identifier .
   26 FunctionDecl: Type T_Identifier . '(' ParamsList ')' StmtBlock

    '('  shift, and go to state 29

    $default  reduce using rule 9 (Variable)


State 24

   16 Type: Type T_Dims .

    $default  reduce using rule 16 (Type)


State 25

   28 ClassDecl: T_Class T_Identifier T_Extends . T_Identifier '{' FieldList '}'
   30          | T_Class T_Identifier T_Extends . T_Identifier T_Implements InterfaceList '{' FieldList '}'

    T_Identifier  shift, and go to state 30


State 26

   29 ClassDecl: T_Class T_Identifier T_Implements . InterfaceList '{' FieldList '}'

    T_Identifier  shift, and go to state 31

    InterfaceList  go to state 32


State 27

   27 ClassDecl: T_Class T_Identifier '{' . FieldList '}'

    T_Identifier  shift, and go to state 1
    T_Void        shift, and go to state 2
    T_Bool        shift, and go to state 3
    T_Int         shift, and go to state 4
    T_Double      shift, and go to state 5
    T_String      shift, and go to state 6

    $default  reduce using rule 35 (FieldList)

    VariableDecl  go to state 33
    Variable      go to state 13
    Type          go to state 14
    FunctionDecl  go to state 34
    FieldList     go to state 35
    Field         go to state 36


State 28

   17 InterfaceDecl: T_Interface T_Identifier '{' . PrototypeList '}'

    T_Identifier  shift, and go to state 1
    T_Void        shift, and go to state 2
    T_Bool        shift, and go to state 3
    T_Int         shift, and go to state 4
    T_Double      shift, and go to state 5
    T_String      shift, and go to state 6

    $default  reduce using rule 19 (PrototypeList)

    Type           go to state 37
    PrototypeList  go to state 38
    Prototype      go to state 39


State 29

   26 FunctionDecl: Type T_Identifier '(' . ParamsList ')' StmtBlock

    T_Identifier  shift, and go to state 1
    T_Void        shift, and go to state 2
    T_Bool        shift, and go to state 3
    T_Int         shift, and go to state 4
    T_Double      shift, and go to state 5
    T_String      shift, and go to state 6

    $default  reduce using rule 22 (ParamsList)

    Variable    go to state 40
    Type        go to state 41
    ParamsList  go to state 42
    Param       go to state 43


State 30

   28 ClassDecl: T_Class T_Identifier T_Extends T_Identifier . '{' FieldList '}'
   30          | T_Class T_Identifier T_Extends T_Identifier . T_Implements InterfaceList '{' FieldList '}'

    T_Implements  shift, and go to state 44
    '{'           shift, and go to state 45


State 31

   31 InterfaceList: T_Identifier . AInterface

    ','  shift, and go to state 46

    $default  reduce using rule 33 (AInterface)

    AInterface  go to state 47


State 32

   29 ClassDecl: T_Class T_Identifier T_Implements InterfaceList . '{' FieldList '}'

    '{'  shift, and go to state 48


State 33

   36 Field: VariableDecl .

    $default  reduce using rule 36 (Field)


State 34

   37 Field: FunctionDecl .

    $default  reduce using rule 37 (Field)


State 35

   27 ClassDecl: T_Class T_Identifier '{' FieldList . '}'

    '}'  shift, and go to state 49


State 36

   34 FieldList: Field . FieldList

    T_Identifier  shift, and go to state 1
    T_Void        shift, and go to state 2
    T_Bool        shift, and go to state 3
    T_Int         shift, and go to state 4
    T_Double      shift, and go to state 5
    T_String      shift, and go to state 6

    $default  reduce using rule 35 (FieldList)

    VariableDecl  go to state 33
    Variable      go to state 13
    Type          go to state 14
    FunctionDecl  go to state 34
    FieldList     go to state 50
    Field         go to state 36


State 37

   16 Type: Type . T_Dims
   20 Prototype: Type . T_Identifier '(' ParamsList ')' ';'

    T_Identifier  shift, and go to state 51
    T_Dims        shift, and go to state 24


State 38

   17 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList . '}'

    '}'  shift, and go to state 52


State 39

   18 PrototypeList: Prototype . PrototypeList

    T_Identifier  shift, and go to state 1
    T_Void        shift, and go to state 2
    T_Bool        shift, and go to state 3
    T_Int         shift, and go to state 4
    T_Double      shift, and go to state 5
    T_String      shift, and go to state 6

    $default  reduce using rule 19 (PrototypeList)

    Type           go to state 37
    PrototypeList  go to state 53
    Prototype      go to state 39


State 40

   25 Param: Variable .

    $default  reduce using rule 25 (Param)


State 41

    9 Variable: Type . T_Identifier
   16 Type: Type . T_Dims

    T_Identifier  shift, and go to state 54
    T_Dims        shift, and go to state 24


State 42

   26 FunctionDecl: Type T_Identifier '(' ParamsList . ')' StmtBlock

    ')'  shift, and go to state 55


State 43

   21 ParamsList: Param . AParam

    ','  shift, and go to state 56

    $default  reduce using rule 24 (AParam)

    AParam  go to state 57


State 44

   30 ClassDecl: T_Class T_Identifier T_Extends T_Identifier T_Implements . InterfaceList '{' FieldList '}'

    T_Identifier  shift, and go to state 31

    InterfaceList  go to state 58


State 45

   28 ClassDecl: T_Class T_Identifier T_Extends T_Identifier '{' . FieldList '}'

    T_Identifier  shift, and go to state 1
    T_Void        shift, and go to state 2
    T_Bool        shift, and go to state 3
    T_Int         shift, and go to state 4
    T_Double      shift, and go to state 5
    T_String      shift, and go to state 6

    $default  reduce using rule 35 (FieldList)

    VariableDecl  go to state 33
    Variable      go to state 13
    Type          go to state 14
    FunctionDecl  go to state 34
    FieldList     go to state 59
    Field         go to state 36


State 46

   32 AInterface: ',' . T_Identifier AInterface

    T_Identifier  shift, and go to state 60


State 47

   31 InterfaceList: T_Identifier AInterface .

    $default  reduce using rule 31 (InterfaceList)


State 48

   29 ClassDecl: T_Class T_Identifier T_Implements InterfaceList '{' . FieldList '}'

    T_Identifier  shift, and go to state 1
    T_Void        shift, and go to state 2
    T_Bool        shift, and go to state 3
    T_Int         shift, and go to state 4
    T_Double      shift, and go to state 5
    T_String      shift, and go to state 6

    $default  reduce using rule 35 (FieldList)

    VariableDecl  go to state 33
    Variable      go to state 13
    Type          go to state 14
    FunctionDecl  go to state 34
    FieldList     go to state 61
    Field         go to state 36


State 49

   27 ClassDecl: T_Class T_Identifier '{' FieldList '}' .

    $default  reduce using rule 27 (ClassDecl)


State 50

   34 FieldList: Field FieldList .

    $default  reduce using rule 34 (FieldList)


State 51

   20 Prototype: Type T_Identifier . '(' ParamsList ')' ';'

    '('  shift, and go to state 62


State 52

   17 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList '}' .

    $default  reduce using rule 17 (InterfaceDecl)


State 53

   18 PrototypeList: Prototype PrototypeList .

    $default  reduce using rule 18 (PrototypeList)


State 54

    9 Variable: Type T_Identifier .

    $default  reduce using rule 9 (Variable)


State 55

   26 FunctionDecl: Type T_Identifier '(' ParamsList ')' . StmtBlock

    '{'  shift, and go to state 63

    StmtBlock  go to state 64


State 56

   23 AParam: ',' . Param AParam

    T_Identifier  shift, and go to state 1
    T_Void        shift, and go to state 2
    T_Bool        shift, and go to state 3
    T_Int         shift, and go to state 4
    T_Double      shift, and go to state 5
    T_String      shift, and go to state 6

    Variable  go to state 40
    Type      go to state 41
    Param     go to state 65


State 57

   21 ParamsList: Param AParam .

    $default  reduce using rule 21 (ParamsList)


State 58

   30 ClassDecl: T_Class T_Identifier T_Extends T_Identifier T_Implements InterfaceList . '{' FieldList '}'

    '{'  shift, and go to state 66


State 59

   28 ClassDecl: T_Class T_Identifier T_Extends T_Identifier '{' FieldList . '}'

    '}'  shift, and go to state 67


State 60

   32 AInterface: ',' T_Identifier . AInterface

    ','  shift, and go to state 46

    $default  reduce using rule 33 (AInterface)

    AInterface  go to state 68


State 61

   29 ClassDecl: T_Class T_Identifier T_Implements InterfaceList '{' FieldList . '}'

    '}'  shift, and go to state 69


State 62

   20 Prototype: Type T_Identifier '(' . ParamsList ')' ';'

    T_Identifier  shift, and go to state 1
    T_Void        shift, and go to state 2
    T_Bool        shift, and go to state 3
    T_Int         shift, and go to state 4
    T_Double      shift, and go to state 5
    T_String      shift, and go to state 6
